--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@ button:hover{
 </p>
 
 <p>
-我们虽然还没有孩子，  
-但是会一直拥有彼此。  
-我们可以慢慢走，慢慢爱，慢慢看着孩子长大  
+我们一定会一直拥有彼此。  
+慢慢走，慢慢爱，慢慢看着孩子长大  
 把平凡的每一天，都过成只属于我们的幸福。
 </p>
 
@@ -147,9 +146,10 @@ function loveExplosion(){
     for(let i=0;i<30;i++){
         createHeart();
     }
-    alert("雪儿，我永远爱你 ❤️能不能穿下丝袜😍");
+    alert("雪儿，我永远爱你❤️");
 }
 </script>
 
 </body>
 </html>
+
